Add basic client

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "attlaz/php-client",
+  "name": "attlaz/client",
   "description": "Attlaz PHP Client",
   "type": "library",
   "license": [
