--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "AFL-3.0"
   ],
   "require": {
-    "php": "~7.0.0",
+    "php": "^7.0.0",
     "guzzlehttp/guzzle": "6.3.*",
     "psr/log": "1.*"
   },
