--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "require": {
     "php": "^7.0.0",
-    "guzzlehttp/guzzle": "6.3.*",
+    "league/oauth2-client": "2.3.*",
     "psr/log": "1.*"
   },
   "autoload": {
