--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
   "require": {
     "php": "^7.0.0",
     "league/oauth2-client": "2.3.*",
-    "psr/log": "1.*"
+    "psr/log": "1.*",
+    "ext-json": "*",
+    "ext-openssl": "*"
   },
   "autoload": {
     "psr-4": {
