--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "AFL-3.0"
   ],
   "require": {
-    "php": "^7.0.0",
+    "php": ">=7.0.0",
     "league/oauth2-client": "2.3.*",
     "psr/log": "1.*",
     "ext-json": "*",
