--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
   "name": "attlaz/client",
-  "description": "Attlaz PHP Client",
+  "description": "Attlaz PHP Client | Attlaz iPaas solutions & tools for cloud connected businesses, automation and scaling",
   "type": "library",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
   "keywords": [
-    "attlaz"
+    "attlaz",
+    "ipaas",
+    "connection",
+    "synchronize"
   ],
+  "license": "MIT",
+  "homepage": "https://attlaz.com",
   "require": {
     "php": ">=7.2 | >=8.0",
     "league/oauth2-client": "^2.6.0",
