--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,17 @@
     "ext-json": "*",
     "ext-openssl": "*"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5.13"
+  },
   "autoload": {
     "psr-4": {
       "Attlaz\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Attlaz\\": "tests/"
     }
   }
 }
