--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "ext-openssl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.13"
+    "phpunit/phpunit": "^9.5.13",
+    "vlucas/phpdotenv": "^1.0.6"
   },
   "autoload": {
     "psr-4": {
