--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,7 @@
     "php": ">=7.4 | >=8.0",
     "league/oauth2-client": "^2.6.1",
     "ext-json": "*",
-    "ext-openssl": "*",
-    "psr/log": "^1.0.1",
-    "echron/tools": "^1"
+    "ext-openssl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.13",
