--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
   "license": "MIT",
   "homepage": "https://attlaz.com",
   "require": {
-    "php": ">=7.4 | >=8.0",
+    "php": ">=8.1",
     "league/oauth2-client": "^2.6.1",
     "ext-json": "*",
     "ext-openssl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.13",
-    "vlucas/phpdotenv": "^1.0.6"
+    "vlucas/phpdotenv": "v5.4.1"
   },
   "autoload": {
     "psr-4": {
