Adapter connection: read id from data + improve readme.md

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "attlaz/client",
-  "description": "Attlaz PHP Client | Attlaz iPaas solutions & tools for cloud connected businesses, automation and scaling",
+  "description": "Attlaz PHP Client | Attlaz - solutions & tools for cloud connected businesses, automation and scaling",
   "type": "library",
   "keywords": [
     "attlaz",
