--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "ext-openssl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.13",
+    "phpunit/phpunit": "^9 | ^10",
     "vlucas/phpdotenv": "v5.6.0"
   },
   "autoload": {
